src/main/java/org/oleg/iem/my_prompt_language/MyParser.bnf
{
  parserClass="org.oleg.iem.my_prompt_language.gen.parser.myPromptParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="MyPrompt"
  psiImplClassSuffix="Impl"
  psiPackage="org.oleg.iem.my_prompt_language.gen.psi"
  psiImplPackage="org.oleg.iem.my_prompt_language.gen.psi.impl"

  elementTypeHolderClass="org.oleg.iem.my_prompt_language.gen.psi.MyPromptTypes"
  elementTypeClass="org.oleg.iem.my_prompt_language.MyPromptElementType"
  tokenTypeClass="org.oleg.iem.my_prompt_language.MyPromptTokenType"
}

myPromptFile ::= comment* context_chunks comment* query comment* details comment* prompt comment* variables* comment* variables_table* comment*

comment ::= COMMENT_VALUE

context_chunks ::= CONTEXT_CHUNKS_KEYWORD SEPARATOR VALUE_LINE
query ::= QUERY_KEYWORD SEPARATOR (VALUE_LINE|VALUE_MULTILINE)
details ::= DETAILS_KEYWORD SEPARATOR (VALUE_LINE|VALUE_MULTILINE)
prompt ::= PROMPT_KEYWORD SEPARATOR (VALUE_LINE|VALUE_MULTILINE)
variables ::= VARIABLES_KEYWORD VARIABLES_SEPARATOR

variables_table ::= table_header table_row*
table_header ::= PIPE cell_value (PIPE cell_value)* PIPE
table_row ::= PIPE cell_value (PIPE cell_value)* PIPE
cell_value ::= VALUE
